stylesheets/common.css
@charset "UTF-8";
/* =CALL LIBRARY */
	@import url("reset-min.css"); /* ------- Reset all CSS Styles */

/* =GENERAL - the general styles */
	body{
		font: 62.5%/2.2em Arial, Tahoma, Verdana,Helvetica, sans-serif;
		color: #4b4942;
		background: #000000 url(../images/bg.jpg) ;
		background-attachment:fixed;
	}
	a{text-decoration: none;color: #222222;}
	a:hover{color: #FFFFFF;}
	.hide,hr{display: none;}
	strong{font-weight: bold;}
	

/* =LAYOUT - the main layout styles */
	/* for the rounded top */
	#containertop{
		position: absolute;
		width: 902px;
		margin: -10px auto 0 auto;
		height: 10px;
		font-size:0.1em;
		background: url(../images/container_top1.png) left bottom no-repeat;
	}
	* html #containertop{behavior: url(stylesheets/iepngfix.htc);} /* to correct transparent png in IE */
	/* container */
	#container{
		width: 902px;
		margin: 44px auto 0 auto;
		background: # url(../images/bg_container1.png);
		padding-bottom:10px;
	}

/* =HEADER */
	/* Logo and Site Title */
	h1{
		font-size: 2.4em;
		font-family: 'BatmanForeverAlternate';
	}
	h3{
		font-size: 1.4em;
	}
	h1 a,h1 a:hover{
		display: block;
		width: 800px;
		height: 20px;
		padding-top:0px;
		margin-left:-30px;
		padding-left:52px;
		color: #FFFFFF;
	}
	hh{
		font-size: 1.1em;
		font-family: 'Arial Black';
	}
/* =TOP NAVIGATION and SEARCH */
	/* top navigation */
	
	#navigation_wrapper{
		background: url(../images/content.png) 0 0 repeat-x;
		height: 37px;
		width: 861px;
		margin: 20px auto 20px auto;
	}
	#navigation{
		float: left;
		padding-left:7px;
		height: 37px;
		background: url(../images/navigation_left1.gif) left top no-repeat;
	}
	#navigation li{
		float: left;
	}
	#navigation li a{
		padding: 7px 60px 0px 50px;
		height: 30px;
		float: left;
		font-family: "Bookman Old Style";
		font-size: 1.35em;
		font-weight: bold;
		letter-spacing:-0.03em;
		color: #222222;
	}
	#navigation li a:hover{
		color: #FFFFFF;
	}
	
	#navigation li.current a{
		color: #FFFFFF;
	}
	#navigation1{
		float: left;
		padding-left:7px;
		height: 37px;
		background: url(../images/navigation_left1.gif) left top no-repeat;
	}
	#navigation1 li{
		float: left;
	}
	#navigation1 li a{
		padding: 17px 32px 0px 24px;
		height: 30px;
		float: left;
		font-family: "Bookman Old Style";
		font-size: 1.35em;
		font-weight: bold;
		letter-spacing:-0.03em;
		color: #b1b3ab;
	}
	#navigation1 li a:hover{
		color: #FFFFFF;
	}
	#navigation1 li.current a{
			color: #FFFFFF;
	}
	/* search */
	#search_wrapper{
		float: right;
		height: 30px;
		padding:7px 10px 0 0;
		background: url(../images/navigation_right.gif) right top no-repeat;
	}
	.search{
		background: #696D5F;
		border: 1px solid #212417;
		width: 160px;
		height: 18px;
		padding: 3px 2px 0 3px;
		color: #474A40;
	}
/* =MAIN IMAGE */
	#main_image{
		width:860px;
		position: relative;
		margin: 0 auto;
	}

	/* frame: the small rounded image in the corner picture (top,right,bottom,left) */
	#frame_image_top,#frame_image_bottom{
		position: absolute;
		width: 860px;
		height: 7px;
		font-size:0.1em;
		top:0;left:0;
		background: url(../images/frame_image_top.png) top no-repeat;
	}
	#frame_image_bottom{
		bottom:0;top:auto;
		background: url(../images/frame_image_bottom.png) bottom no-repeat;
	}
	* html #frame_image_top,* html #frame_image_bottom{behavior: url(stylesheets/iepngfix.htc);} /* to correct transparent png in IE */
/* =MAIN IMAGE */
	#main_image1{
			width:861px;
			position: relative;
			margin: 57px auto 0 auto ;
			
	}
	.banner img{border: 2px solid #000000;}
/* =BANNER */
	#banner_wrapper{
		width: 861px;
		overflow: hidden;
		padding:20px 0px 0px 20px;
	}
	.banner img{border: 2px solid #000000;}
	.banner{
		float: left;
		width: 251px;
		background: url(../images/content.png) left repeat-y;
		margin-right:54px;
		padding-bottom:6px;
		position: relative;
	}
	
	.image_wrapper{text-align: center; color:}
	.banner img{border: 2px solid #000000;}
	.banner_last{margin-right:0px;}
	.banner h2{
		height: 38px;
		font-family: "Bookman Old Style";
		font-size: 1.65em;
		font-weight: bold;
		letter-spacing:-0.03em;
		color: #222222;
		padding: 15px 0 0 0px;
		text-align: center;
	}
	/* for the rounded bottom */
	.image_wrapper span{
		position: absolute;
		width: 261px;
		height: 6px;
		font-size:.1em;
		left:0;bottom:-1px;
		background: #353C2C url(../images/banner_bottom.gif) bottom no-repeat;
	}
	
/* =SERVICES */
	#services{
		width: 858px;
		margin:0 auto;
		position: relative;
		background: url(../images/content.png) bottom repeat-x;
		}
	#servicescontent{
		width: 500px;
		margin: 0 10px -10px 30px;
		text-align:justify;
		font-family: "Monotype Corsiva", "Trebuchet MS", Arial, Helvetica, sans-serif;
		
		letter-spacing:0.04em;
		color: #FFFFFF;
		font-size:1.9em;
		padding: 36px 0 20px 280px;
		
	}
	/* sevices header */
	#services h2{
		background: url(../images/content.png);
		height: 0px;
		font-size:2.1em;
		color: #222222;
		padding: 0px 0 0 15px;
		border-bottom: 1px ;
	}
	/* top rounded image */
	#services h2 span{
		position: absolute;
		display: block;
		height: 0px;
		width: 862px;
		left:0;top:0;
		font-size:0.1em;
		background: url(../images/about_img1.jpg) left top no-repeat;
		margin: -2px;
	}
	/* bottom rounded image */
	.bottom_rounded{
		position: absolute;
		display: block;
		width: 862px;
		height: 7px;
		font-size:0.1em;
		right:0;bottom:0;
		background: url(../images/services_bottom.jpg) no-repeat;
		margin: -2px;
	}
	/* big image on the right bottom */
	.bottom_pic{
		z-index:2;
		position: absolute;
		padding-right: 560px;
		bottom:-83px;right:0;
		width: 287px;
		height: 398px;
		margin-bottom:52px;
		background: url(../images/aboutus_img.jpg) left top no-repeat;
	}
	/* list of services */
	.serviceslist{
		padding-left: 30px;
		float: left;
		font-size:1.3em;
		line-height:1em;
	}
	.serviceslist li a{
		display: block;
		padding: 10px;
		width: 197px;
		font-family: "Lucida Grande", "Trebuchet MS", Arial, Helvetica, sans-serif;
		text-transform: uppercase;
		letter-spacing:-.03em;
		color: #222222;
		background: url(../images/list_dotted_border.gif) bottom repeat-x;
	}
	.serviceslist li a:hover{
		color: #7B8266;
		background: #2C3421 url(../images/list_dotted_border.gif) bottom repeat-x;
	}
	
/* =SERVICES1 */
	#services1{
		width: 858px;
		margin:20px auto 0 auto;
		position: relative;
		background: url(../images/content.png) bottom repeat-x;
		}
	#servicescontent1{
		width: 750px;
		margin: 0 10px ;
		text-align:justify;
		font-family: "Arial", "Trebuchet MS", Arial, Helvetica, sans-serif;
		letter-spacing:0.04em;
		color: #000000;
		font-size:1.9em;
		padding: 15px 0 20px 48px;
		
	}
	/* sevices header */
	#services1 h2{
		background: url(../images/content.png);
		height: 0px;
		font-size:2.1em;
		color: #222222;
		padding: 0px 0 0 15px;
		border-bottom: 1px ;
	}
	/* top rounded image */
	#services1 h2 span{
		position: absolute;
		display: block;
		height: 0px;
		width: 862px;
		left:0;top:0;
		font-size:0.1em;
		background: url(../images/about_img1.jpg) left top no-repeat;
		margin: -2px;
	}
	/* bottom rounded image */
	.bottom_rounded1{
		position: absolute;
		display: block;
		width: 862px;
		height: 7px;
		font-size:0.1em;
		right:0;bottom:0;
		background: url(../images/services_bottom.jpg) no-repeat;
		margin: -2px;
	}
	/* big image on the right bottom */
	.bottom_pic1{
		z-index:2;
		position: absolute;
		padding-right: 560px;
		bottom:-83px;right:0;
		width: 287px;
		height: 398px;
		margin-bottom:52px;
		background: url(../images/aboutus_img1.jpg) left top no-repeat;
	}
	/* list of services */
	.serviceslist1{
		padding-left: 30px;
		float: left;
		font-size:1.3em;
		line-height:1em;
	}
	.serviceslist1 li a{
		display: block;
		padding: 10px;
		width: 197px;
		font-family: "Lucida Grande", "Trebuchet MS", Arial, Helvetica, sans-serif;
		text-transform: uppercase;
		letter-spacing:-.03em;
		color: #222222;
		background: url(../images/list_dotted_border.gif) bottom repeat-x;
	}
	.serviceslist1 li a:hover{
		color: #7B8266;
		background: #2C3421 url(../images/list_dotted_border.gif) bottom repeat-x;
	}
	
/* =FOOTER */
	#footer_wrapper{
		width: 861px;
		padding-left:30px;
		padding-bottom:25px;
		margin: 10px auto 20px auto ;
		font-size: 1.2em;
		background: url(../images/footer_left1.png) 0 0 no-repeat;
	}
	#footer{
		position: relative;
		width: 861px;
		height: 37px;
		margin-left: -15px;
		background: url(../images/content.png) 0 bottom repeat-x;
	}
	#footer .logo{
		padding: 8px 0 0 25px;
		width: 400px;
		float: left;
		
	}
	#footer .logo span{
		position: absolute;
		display: block;
		right:-31px;top:0;
		width: 31px;
		height: 67px;
		background: url(../images/footer_right1.png) right bottom no-repeat;
	}
	* html #footer .logo span, * html #footer_wrapper{behavior: url(stylesheets/iepngfix.htc);}
	#footer ul{
		padding-top: 8px;
		padding-right: 25px;
		float: right;
	}
	#footer ul li{
		float: left;
		padding-left:10px;
	}
	#footer a{
		color: #222222;
	}
	#footer a:hover{
		color: #FFFFFF;
		}
	#footer li a:hover{
		color: #FFFFFF;
	}

/* js-disabled class - set image sizes so they all fit in the viewer */

.js-disabled img { width:100px; height:100px; display:block; float:left; margin:30px 0 0; }

#outerContainer { width:542px; height:202px; margin:auto; position:relative; }

#imageScroller { width:542px; height:202px; position:relative; background:#000000 url(../images/imageScrollerBG.png) no-repeat; }

#viewer { width:522px; height:182px; overflow:hidden; margin:auto; position:relative; top:10px; }

#imageScroller a:active, #imageScroller a:visited { color:#000000; }

#imageScroller a img { border:0; }

#controls { width:534px; height:47px; background:url(../images/controlsBG.png) no-repeat; position:absolute; top:4px; left:4px; z-index:10;	}

#controls a { width:37px; height:35px; position:absolute; top:3px; }

#controls a:active, #controls a:visited { color:#0d0d0d; }

#title { color:#ffffff; font-family:arial; font-size:100%; font-weight:bold; width:100%; text-align:center; margin-top:10px; }

#rtl { background:url(../images/rtl.png) no-repeat; left:100px; }

#rtl:hover { background:url(../images/rtl_over.png) no-repeat; left:99px; }

#ltr { background:url(../images/ltr.png) no-repeat; right:100px; }

#ltr:hover { background:url(../images/ltr_over.png) no-repeat; }


.main_gallery{
	width: 858px;
	margin:57px auto;
/*	position: relative;*/
	background: url(../images/content.png) bottom repeat-x;

}

